RESOLVED FIXED75650
Media Element: scrubbing in full-screen mode breaks playback.
https://bugs.webkit.org/show_bug.cgi?id=75650
Summary Media Element: scrubbing in full-screen mode breaks playback.
Jer Noble
Reported 2012-01-05 14:34:41 PST
Media Element: scrubbing in full-screen mode breaks playback.
Attachments
Patch (4.39 KB, patch)
2012-01-05 16:00 PST, Jer Noble
sullivan: review+
Jer Noble
Comment 1 2012-01-05 14:36:14 PST
The media panel and the timeline both attempt to handle the mouseDown event during a scrub event, which results in the timeline never receiving a mouseUp event.
Jer Noble
Comment 2 2012-01-05 14:36:29 PST
Jer Noble
Comment 3 2012-01-05 16:00:33 PST
Eric Carlson
Comment 4 2012-01-05 17:06:29 PST
Comment on attachment 121359 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121359&action=review > Source/WebCore/html/shadow/MediaControlElements.cpp:243 > + } else if (event->type() == eventNames().mousemoveEvent && m_isBeingDragged) > continueDrag(location); Is there no need to call setDefaultHandled() on the move event? > LayoutTests/ChangeLog:9 > + * fullscreen/video-controls-timeline.html: Added. > + Did you forget to add the test results?
Jer Noble
Comment 5 2012-01-05 18:24:56 PST
(In reply to comment #4) > (From update of attachment 121359 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=121359&action=review > > > Source/WebCore/html/shadow/MediaControlElements.cpp:243 > > + } else if (event->type() == eventNames().mousemoveEvent && m_isBeingDragged) > > continueDrag(location); > > Is there no need to call setDefaultHandled() on the move event? There is no need. The panel has already started capturing events at this point, so none of the other controls will get their default event handler called. > > LayoutTests/ChangeLog:9 > > + * fullscreen/video-controls-timeline.html: Added. > > + > > Did you forget to add the test results? I did; I'll add them before checking in.
Jer Noble
Comment 6 2012-01-06 11:13:14 PST
Note You need to log in before you can comment on or make changes to this bug.