Media Element: scrubbing in full-screen mode breaks playback. https://bugs.webkit.org/show_bug.cgi?id=75650

Reviewed by John Sullivan.

Source/WebCore:

Test: fullscreen/video-controls-timeline.html

Only begin scrubbing if the panel itself is the mousedown event target.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlPanelElement::defaultEventHandler):

LayoutTests:

* fullscreen/video-controls-timeline-expected.txt: Added.
* fullscreen/video-controls-timeline.html: Added.

Canonical link: https://commits.webkit.org/92513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104303 268f45cc-cd09-0410-ab3c-d52691b4dbfc